Rewrite of ChipsService, be warned!